--- a/visual_data_analysis.ipynb
+++ b/visual_data_analysis.ipynb
@@ -209,7 +209,7 @@
    ],
    "source": [
     "# Plot for cardholder 18\n",
-    "cardholder_18 = query_results.loc[df['id']==18].sort_values(by = 'date')\n",
+    "cardholder_18 = query_results.loc[query_results['id']==18].sort_values(by = 'date')\n",
     "cardholder_18.plot.line(x = 'date', y = 'amount', rot = 90)"
    ]
   },
@@ -389,7 +389,7 @@
     "on b.card = c.card\"\n",
     "        \"\"\"\n",
     "# Create a DataFrame from the query result. HINT: Use pd.read_sql(query, engine)\n",
-    "query_results_2 = query_results.loc[(df['id']==25) & (query_results['date'] < datetime.date(datetime(2018,7,1)))].sort_values(by = 'date')\n",
+    "query_results_2 = query_results.loc[(query_results['id']==25) & (query_results['date'] < datetime.date(datetime(2018,7,1)))].sort_values(by = 'date')\n",
     "query_results_2.head()\n"
    ]
   },
